my-k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis
  labels:
    app: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:alpine

          ports:
            - containerPort: 6379

          # readinessProbe:
          #   exec:
          #     command:
          #       - redis-cli
          #       - ping
          #   initialDelaySeconds: 5
          #   periodSeconds: 10

          # livenessProbe:
          #   exec:
          #     command:
          #       - redis-cli
          #       - ping
          #   initialDelaySeconds: 15
          #   periodSeconds: 20

          # resources:
          #   requests:
          #     cpu: "100m"
          #     memory: "128Mi"
          #   limits:
          #     cpu: "500m"
          #     memory: "256Mi"
