my-k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: vote

spec:
  replicas: 1

  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
        - name: vote
          image: dockersamples/examplevotingapp_vote
          ports:
            - containerPort: 80
