my-k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker
  labels:
    app: worker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker
          image: dockersamples/examplevotingapp_worker:latest

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - test -f /proc/1/stat
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - test -f /proc/1/stat
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
