my-k8s/db-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: db
  labels:
    app: db

spec:
  type: ClusterIP

  selector:
    app: db

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
