my-k8s/result-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: result
  labels:
    app: result

spec:
  type: ClusterIP

  selector:
    app: result

  ports:
    - name: http
      port: 80
      targetPort: 80
